--- a/.gitignore
+++ b/.gitignore
@@ -278,7 +278,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # data dir
-# data/
-# data/*
+data/
+data/*
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,linux,windows,macos
