--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,7 @@ poetry.toml
 pyrightconfig.json
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -276,5 +277,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+exp/
+exp/*
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,linux,windows,macos
